--- a/app/admin/template/administrative/tag.twig
+++ b/app/admin/template/administrative/tag.twig
@@ -3,40 +3,40 @@
 {% block content %}
 {% if action == 'edit' %}
 	<ol class="breadcrumb">
+		<li><a href="/">{% trans "Home" %}</a></li>
 		<li><a href="/administrative/tag">{% trans "Tags" %}</a></li>
 		<li class="active">{{ tag.name }}</li>
 	</ol>
 
-	{% if session_message == 'tag_updated' %}
-		<div class="alert alert-success">
-			{% trans "Tag updated" %}
-		</div>
+	{% if env.sticky_session.message is defined %}
+		{{ base.display_flash_message(env.sticky_session.message, 'tag') }}
 	{% endif %}
 
 
 	<form class="form-horizontal" method="post" action="/administrative/tag?action=edit&id={{ tag.id }}">
 
-	<div class="panel panel-default">
-		<div class="panel-heading">{% trans "Tag details" %}</div>
-		<div class="panel-body">
-			<div class="form-group">
-				<label class="col-xs-3 control-label">{% trans "Name" %}</label>
-				<div class="col-xs-9"><input type="text" name="tag[name]" class="form-control" value="{{ tag.name }}" /></div>
-			</div>
+		<div class="panel panel-default">
+			<div class="panel-heading">{% trans "Tag details" %}</div>
+			<div class="panel-body">
+				<div class="form-group">
+					<label class="col-xs-3 control-label">{% trans "Name" %}</label>
+					<div class="col-xs-9"><input type="text" name="tag[name]" class="form-control" value="{{ tag.name }}" /></div>
+				</div>
 
-			<div class="form-group">
-				<div class="col-xs-offset-3 col-xs-9">
-					<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+				<div class="form-group">
+					<div class="col-xs-offset-3 col-xs-9">
+						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 	</form>
 
 
 {% else %}
 	<ol class="breadcrumb">
+		<li><a href="/">{% trans "Home" %}</a></li>
 		<li class="active">{% trans "Tags" %}</li>
 	</ol>
 
@@ -73,7 +73,7 @@
 		{% if loop.first %}
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				{{ base.pager_count(pager) }}
+				{{ base.pager_count(pager.item_count) }}
 			</div>
 			<div class="panel-body">
 				<table class="table table-striped table-hover table-condensed">
