--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -9,6 +9,7 @@
 
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="handheld, all">
 	<link rel="stylesheet" href="/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
+	<link rel="stylesheet" href="/bootstrap-multiselect/dist/css/bootstrap-multiselect.css" />
 	<link rel="stylesheet" href="/style.css" type="text/css" media="handheld, all">
 
 	<script type="text/javascript" src="/jquery/jquery.min.js"></script>
@@ -17,6 +18,11 @@
 	<script src="/tigron-confirm-modal/js/bootstrap.confirm-modal.js"></script>
 	<script src="/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
 	<script src="/tigron-datetimepicker/js/tigron-datetimepicker.js"></script>
+	<script type="text/javascript" src="/jquery-zoom/jquery.zoom.min.js"></script>
+	<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
+	<script type="text/javascript" src="/bootstrap-multiselect/dist/js/bootstrap-multiselect.js"></script>
+	<script type="text/javascript" src="/jquery.autogrow-textarea/jquery.autogrow-textarea.js"></script>
+
 
 	{% spaceless %}
 		{% block head %}{% endblock head %}
