--- a/app/admin/template/administrative/document/list.twig
+++ b/app/admin/template/administrative/document/list.twig
@@ -1,35 +1,41 @@
-	{% for document in pager.items %}
-		{% if loop.first %}
-			<table class="table table-hover table-striped table-condensed table-responsive table-bordered">
-			<thead>
-				<tr>
-					<th>#</th>
-					<th>{% trans "Created" %}</th>
-					<th>{% trans "Title" %}</th>
-					<th colspan="3">&nbsp;</th>
-				</tr>
-			</thead>
-			<tbody>
-		{% endif %}
+<div class="panel panel-default">
 
-				<tr>
-					<td>{{ document.id }}</td>
-					<td>{{ document.created|date }}</td>
-					<td>{{ document.title }}</td>
-					<td>
-						<a href="/file?id={{ document.file_id }}">
-							<span class="glyphicon glyphicon-download"></span>
-						</a>
-					</td>
-					<td>
-						<a href="javascript:void(0);" data-id="{{ document.id }}">
-							<span class="glyphicon glyphicon-pushpin"></span>
-						</a>
-					</td>
-				</tr>
+	<div class="panel-body">
+		{% for document in pager.items %}
+			{% if loop.first %}
+				<table class="table table-hover table-striped table-condensed table-responsive">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>{% trans "Created" %}</th>
+						<th>{% trans "Title" %}</th>
+						<th colspan="3">&nbsp;</th>
+					</tr>
+				</thead>
+				<tbody>
+			{% endif %}
 
-		{% if loop.last %}
-			</tbody>
-			</table>
-		{% endif %}
-	{% endfor %}
+					<tr>
+						<td>{{ document.id }}</td>
+						<td>{{ document.created|date }}</td>
+						<td>{{ document.title }}</td>
+						<td>
+							<a href="/file?id={{ document.file_id }}">
+								<span class="glyphicon glyphicon-download"></span>
+							</a>
+						</td>
+						<td>
+							<a href="javascript:void(0);" data-id="{{ document.id }}">
+								<span class="glyphicon glyphicon-pushpin"></span>
+							</a>
+						</td>
+					</tr>
+
+			{% if loop.last %}
+				</tbody>
+				</table>
+			{% endif %}
+		{% endfor %}
+	</div>
+
+</div>
