--- a/store/email/template/_default/invoice_reminder/html.twig
+++ b/store/email/template/_default/invoice_reminder/html.twig
@@ -1,11 +1,11 @@
-{% extends "layout.base.twig" %}
+{% extends "_default/layout.base.twig" %}
 
 {% block content %}
 	<h1 style="font-size: 12pt; color: #333333; margin-bottom: 15px">{% trans "Invoice reminder" %}</h1>
 	<p>{% trans "Dear customer" %},</p>
-	<p>{% trans "We noticed that you have one or more unpaid invoices for Tigron DC" %}.<br />
-	{% trans "In attachment you'll find the unpaid invoices" %}.<br />
-	{% trans "If you recently paid the invoices, you can ignore this email. It can take up to a week for your payment to be processed" %}.
+	<p>{% trans "We noticed that you have one or more unpaid invoices." %}<br />
+	{% trans "In attachment you'll find the unpaid invoices." %}<br />
+	{% trans "If you recently paid the invoices, you can ignore this email. It can take up to a week for your payment to be processed." %}
 	</p>
 
 	<h2 style="font-size: 10pt; color: #444444; padding: 2px">{% trans "Unpaid invoices" %}</h2>
