--- a/store/email/template/_default/invoice_reminder/text.twig
+++ b/store/email/template/_default/invoice_reminder/text.twig
@@ -1,13 +1,13 @@
-{% extends "layout.base.text.twig" %}
+{% extends "_default/layout.base.text.twig" %}
 
 {% block content %}
 {% trans "Invoice reminder" %}
 
 {% trans "Dear customer" %},
 
-{% trans "We noticed that you have one or more unpaid invoices for Tigron DC" %}.
-{% trans "In attachment you'll find the unpaid invoices" %}.
-{% trans "If you recently paid the invoices, you can ignore this email. It can take up to a week for your payment to be processed" %}.
+{% trans "We noticed that you have one or more unpaid invoices for." %}
+{% trans "In attachment you'll find the unpaid invoices." %}
+{% trans "If you recently paid the invoices, you can ignore this email. It can take up to a week for your payment to be processed." %}
 
 {% trans "Unpaid invoices" %}
 
