--- a/app/admin/template/administrative/document.twig
+++ b/app/admin/template/administrative/document.twig
@@ -10,29 +10,54 @@
 			<li class="active">{% trans "Edit Document" %}</li>
 		</ul>
 
-		{% if message == 'document_updated' %}
-		<div class="alert alert-success">
-			{% trans "Document details saved" %}
-		</div>
+		{% if env.sticky_session.message == 'updated' %}
+			{{ base.display_flash_message(env.sticky_session.message, 'document') }}
+		{% elseif env.sticky_session.message == 'tags_updated' %}
+			<div class="alert alert-success alert-dismissable">
+				{% trans "The document tags have been updated." %}
+			</div>
 		{% endif %}
 
-		<form class="form-horizontal form-condensed" action="/administrative/document?action=edit&id={{ document.id }}" method="post">
+		<div class="row">
+			<div class="{% if document.preview_file_id > 0 %}col-xs-8{% else %}col-xs-12{% endif %}">
+				<div class="panel panel-default">
+					<div class="panel-heading">{% trans "Document details" %}</div>
+					<div class="panel-body">
 
-			<div class="row">
-				<div class="{% if document.preview_file_id > 0 %}col-xs-8{% else %}col-xs-12{% endif %}">
-					<div class="panel panel-default">
-						<div class="panel-heading">{% trans "Document details" %}</div>
-						<div class="panel-body">
-
-							<div class="form-group">
-								<label class="col-xs-3 control-label">{% trans "File" %}</label>
+						<form class="form-horizontal form-condensed" action="/administrative/document?action=edit&id={{ document.id }}" method="post">
+							<div class="form-group{% if 'file_id' in errors|keys %} has-error{% endif %}">
+								<label for="file_id" class="col-xs-3 control-label">{% trans "File" %}</label>
 								<div class="col-xs-9">
-									<p class="form-control-static">
-										<a href="/administrative/document?action=download&id={{ document.id }}">{{ document.file.name }}</a>
-										<a href="#replace_document" data-toggle="modal">
-											<span class="glyphicon glyphicon-refresh"></span>
-										</a>
-									</p>
+									<div id="document-file" class="form-control-static">
+										{% if document.file_id > 0 %}
+											<div class="file">
+												<input type="hidden" name="document[file_id]" value="{{ document.file_id }}" />
+												<span>{{ document.file.name }}</span> [ {{ document.file.get_human_size() }} ]
+												<a href="javascript:void(0);" onclick="remove_file($(this).parents('.file'));" title="{% trans "Delete file" %}">
+													<span class="glyphicon glyphicon-trash"></span>
+												</a>
+												<a href="/administrative/document?action=download&id={{ document.id }}">
+													<span class="glyphicon glyphicon-download"></span>
+												</a>
+											</div>
+										{% endif %}
+
+										{{ form.invalid_input('file_id', errors) }}
+									</div>
+
+									<div class="dropzone" id="document-dropzone">
+										<div class="dz-default dz-message">
+											<span>{% trans "Drag and Drop file" %}</span>
+											<span>({% trans "or click here" %})</span>
+										</div>
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+												<span class="sr-only">0% Complete</span>
+											</div>
+										</div>
+										<div class="fallback"></div>
+									</div>
+
 								</div>
 							</div>
 
@@ -53,11 +78,7 @@
 							<div class="form-group">
 								<label class="col-xs-3 control-label">{% trans "Tags" %}</label>
 								<div class="col-xs-9">
-									<select name="tags[]" multiple class="multiselect">
-										{% for tag in tags %}
-											<option value="{{ tag.id }}" {% if document.has_tag(tag) %}selected{% endif %}>{{ tag.name }}</option>
-										{% endfor %}
-									</select>
+									<input type="text" class="form-control" name="tag_ids" id="autocomplete-tag" value="" />
 								</div>
 							</div>
 
@@ -74,26 +95,27 @@
 									<a href="/administrative/document?action=delete&id={{ document.id }}" class="btn btn-danger" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?" >{% trans "Delete" %}</a>
 								</div>
 							</div>
-						</div>
+
+						</form>
 					</div>
 				</div>
-
-				{% if document.preview_file_id > 0 %}
-				<div class="col-xs-4">
-					<div class="panel panel-default">
-						<div class="panel-heading">{% trans "Preview" %}</div>
-						<div class="panel-body text-center zoom">
-							<a href="/picture?id={{ document.preview_file_id }}">
-								<img src="/picture?id={{ document.preview_file_id }}&size=document_preview" />
-							</a>
-						</div>
-					</div>
-				</div>
-				{% endif %}
-
 			</div>
 
-		</form>
+			{% if document.preview_file_id > 0 %}
+			<div class="col-xs-4">
+				<div class="panel panel-default">
+					<div class="panel-heading">{% trans "Preview" %}</div>
+					<div class="panel-body text-center zoom">
+						<a href="/picture?id={{ document.preview_file_id }}">
+							<img src="/picture?id={{ document.preview_file_id }}&size=document_preview" />
+						</a>
+					</div>
+				</div>
+			</div>
+			{% endif %}
+
+		</div>
+
 
 	{% elseif action == 'add' %}
 
@@ -119,6 +141,13 @@
 						<div class="col-xs-9">
 							<input type="text" name="document[title]" id="title" class="form-control" value="{{ document.title }}">
 							{{ form.invalid_input('title', errors) }}
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Tags" %}</label>
+						<div class="col-xs-9">
+							<input type="text" class="form-control" name="tag_ids" id="autocomplete-tag" value="" />
 						</div>
 					</div>
 
@@ -252,7 +281,7 @@
 						</td>
 						<td width="20">
 							{% if not document.is_purchase() %}
-								<a href="/administrative/document?action=delete&id={{ document.id }}" title="{% trans "Delete document" %}">
+								<a href="/administrative/document?action=delete&id={{ document.id }}" title="{% trans "Delete document" %}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
 									<span class="glyphicon glyphicon-trash"></span>
 								</a>
 							{% endif %}
@@ -282,7 +311,8 @@
 
 {% block javascript %}
 
-	{% if action == 'add' %}
+	{% if action == 'add' or action == 'edit' %}
+
 		<script type="text/javascript" src="/dropzone/dist/dropzone.js"></script>
 		<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
 		<script type="text/x-handlebars-template" id="document-file-template">
@@ -342,7 +372,7 @@
 				}
 			});
 
-			if($('#document-file').find('.file').length == 1) {
+			if ($('#document-file').find('.file').length == 1) {
 				$('#document-dropzone').hide();
 			}
 
@@ -351,17 +381,39 @@
 				$('#document-dropzone').show();
 			}
 
-		</script>
-	{% elseif action == 'edit' %}
-		<script type="text/javascript">
-		$(document).ready(function(){
-			$('.zoom').zoom({
-				url: '/picture?id={{ document.preview_file_id }}'
+			$(document).ready(function(){
+				$('.zoom').zoom({
+					url: '/picture?id={{ document.preview_file_id }}'
+				});
 			});
-		});
-		</script>
 
+		</script>
+		<script type="text/javascript" src="/bootstrap-tokenfield.min.js"></script>
+		<script type="text/javascript" src="/bloodhound.min.js"></script>
+		<script type="text/javascript" src="/typeahead.min.js"></script>
+		<script type="text/javascript">
+
+			var tags = new Bloodhound({
+				datumTokenizer: Bloodhound.tokenizers.obj.whitespace('value'),
+				queryTokenizer: Bloodhound.tokenizers.whitespace,
+				remote: '/administrative/tag?action=ajax_search&search=%QUERY'
+			});
+
+			tags.initialize();
+
+			$('#autocomplete-tag').tokenfield({
+				typeahead: [null, { source: tags.ttAdapter(), displayKey: 'label' }]
+			});
+
+			$('#autocomplete-tag').tokenfield('setTokens', [{% for selected_tag in selected_tags %}{ value: "{{ selected_tag.id }}", label: "{{ selected_tag.name }}" }{% if not loop.last %},{% endif %}{% endfor %}]);
+
+		</script>
 
 	{% endif %}
 
 {% endblock javascript %}
+
+{% block head %}
+	<link rel="stylesheet" type="text/css" href="/typeahead.css">
+	<link rel="stylesheet" type="text/css" href="/bootstrap-tokenfield.min.css">
+{% endblock %}
