Fix typo, remove transparency of doc preview

--- a/app/admin/template/administrative/purchase.twig
+++ b/app/admin/template/administrative/purchase.twig
@@ -280,7 +280,7 @@
 
 				<tr>
 					<td>{{ purchase.id }}</td>
-					<td>{{ purchase.expiratione_date|date }}</td>
+					<td>{{ purchase.expiration_date|date }}</td>
 					<td>{{ purchase.supplier.company }}</td>
 					<td class="text-right">€{{ purchase.price_incl|number_format }}</td>
 					<td>
