--- a/app/admin/template/administrative/tag.twig
+++ b/app/admin/template/administrative/tag.twig
@@ -44,9 +44,6 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			{% trans "Filter" %}
-			<div class="pull-right">
-				<a href="#new_tag" data-toggle="modal"><span class="glyphicon glyphicon-plus-sign"></span> {% trans "New tag" %}</a>
-			</div>
 		</div>
 		<div class="panel-body">
 			<div class="form-group">
@@ -69,49 +66,64 @@
 
 	{% include "administrative/tag/new.twig" with {"id": "new_tag"} %}
 
-	{% for tag in pager.items %}
-		{% if loop.first %}
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				{{ base.pager_count(pager.item_count) }}
-			</div>
-			<div class="panel-body">
-				<table class="table table-striped table-hover table-condensed">
-					<thead>
-						<tr>
-							<th>{{ pager.create_header('Name'|trans, 'name')|raw }}</th>
-							<th width="20">&nbsp;</th>
-							<th width="20">&nbsp;</th>
-						</tr>
-					</thead>
-					<tbody>
-		{% endif %}
-		<tr>
-			<td>{{ tag.name }}</td>
-
-			<td>
-				<a href="/administrative/tag?id={{ tag.id }}&action=edit">
-					<span class="glyphicon glyphicon-pencil"></span>
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<div class="pull-right">
+				<a href="#new_tag" data-toggle="modal" title="">
+					<span class="glyphicon glyphicon-plus-sign"></span>
+					{% trans "Add tag" %}
 				</a>
-			</td>
-			<td>
-				<a href="/administrative/tag?id={{ tag.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
-					<span class="glyphicon glyphicon-remove" />
-				</a>
-			</td>
-		</tr>
-
-		{% if loop.last %}
-					</tbody>
-				</table>
-
-				{{ pager.links|raw }}
 			</div>
+
+			{{ base.pager_count(pager.item_count) }}
 		</div>
-		{% endif %}
-	{% else %}
-		<p>{% trans "No tags found" %}
-	{% endfor %}
+		<div class="panel-body">
+
+		{% for tag in pager.items %}
+			{% if loop.first %}
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					{{ base.pager_count(pager.item_count) }}
+				</div>
+				<div class="panel-body">
+					<table class="table table-striped table-hover table-condensed">
+						<thead>
+							<tr>
+								<th>{{ pager.create_header('Name'|trans, 'name')|raw }}</th>
+								<th width="20">&nbsp;</th>
+								<th width="20">&nbsp;</th>
+							</tr>
+						</thead>
+						<tbody>
+			{% endif %}
+			<tr>
+				<td>{{ tag.name }}</td>
+
+				<td>
+					<a href="/administrative/tag?id={{ tag.id }}&action=edit">
+						<span class="glyphicon glyphicon-pencil"></span>
+					</a>
+				</td>
+				<td>
+					<a href="/administrative/tag?id={{ tag.id }}&action=delete" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure" %}?">
+						<span class="glyphicon glyphicon-remove" />
+					</a>
+				</td>
+			</tr>
+
+			{% if loop.last %}
+						</tbody>
+					</table>
+
+					{{ pager.links|raw }}
+				</div>
+			</div>
+			{% endif %}
+		{% else %}
+				<p><em>{% trans "No tags found." %}</em></p>
+		{% endfor %}
+		</div>
+	</div>
 
 
 {% endif %}
